--- a/simon.css
+++ b/simon.css
@@ -1,23 +1,90 @@
-body{
-    background-color: #C8C8CD;
-}
-.colorButton{
-        border-radius: 75px;
-    padding: 150px;
+body {
+	background-color: #C8C8CD;
 }
 
-#red{
-    background-color: #ED0A3F;
+.gameDiv {
+	width: 526px;
+	height: 526px;
+	margin: auto;
+	margin-top: 100px;
+	background-color: #282828;
+	border-radius: 100%;
+	z-index: 0;
 }
 
-#yellow{
-    background-color: #FBE870;
+.colorButton {
+	width: 200px;
+	height: 200px;
+	z-index: 1;
 }
 
-#blue{
-    background-color: #0066FF
+.red {
+	border-radius: 100% 0% 0% 0%;
+	margin: 45px 15px 15px 45px;
+	background-color: #ED0A3F;
 }
 
-#green{
-    background-color: #3AA655;
+.redLight {
+	background-color: #FD5B78;
+}
+
+.yellow {
+	border-radius: 0% 100% 0% 0%;
+	margin: 45px 45px 15px 15px;
+	background-color: #FFEB00;
+}
+
+.yellowLight {
+	background-color: #FFFF99;
+}
+
+.blue {
+	border-radius: 0% 0% 0% 100%;
+	margin: 15px 15px 45px 45px;
+	background-color: #0066FF
+}
+
+.blueLight {
+	background-color: #4997D0;
+}
+
+.green {
+	border-radius: 0% 0% 100% 0%;
+	margin: 15px 45px 45px 15px;
+	background-color: #3AA655;
+}
+.greenLight {
+	background-color: #9DE093;
+}
+
+#centerCircle {
+	width: 260px;
+	height: 260px;
+	background-color: #282828;
+	border-radius: 100%;
+	margin: auto;
+	margin-top: -380px;
+	position: relative;
+	z-index: 3;
+}
+
+.menuButtons {
+	width: 50px;
+	height: 50px;
+	background-color: #ED0A3F;
+	border-radius: 100%;
+	margin: 25px 0px 0px 238px;
+	position: relative;
+	z-index: 4;
+}
+
+#screen {
+	color: #ED0A3F;
+	background-color: #500000;
+	font-family: 'VT323';
+	width: 140px;
+	text-align: center;
+	margin: -175px 0px 0px 193px;
+	position: relative;
+	z-index: 4;
 }
